--- a/my-groceries-app/src/index.css
+++ b/my-groceries-app/src/index.css
@@ -11,3 +11,34 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+container {
+  display: flex;
+}
+
+.list {
+  flex: 0 1 auto;
+  justify-content: center;
+  align-items: flex-start;
+  display: flex;
+}
+
+.list-item {
+  list-style: none;
+  color: whitesmoke;
+  min-width: 200px;
+  padding: 10px;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex: 0 1 auto;
+  text-align: left;
+}
+
+.list-item:nth-child(2n - 1) {
+  background-color: tan;
+}
+
+.list-item:nth-child(2n - 2) {
+  background-color: lightpink;
+}
