--- a/my-groceries-app/src/index.scss
+++ b/my-groceries-app/src/index.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;500&display=swap");
+
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
@@ -17,7 +18,8 @@ h6 {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
 .container {
@@ -36,6 +38,9 @@ code {
   border-radius: 5px;
 }
 
+.list-container > h3 {
+}
+
 .list {
   display: flex;
   flex-direction: column;
@@ -50,7 +55,7 @@ code {
   justify-content: space-between;
   position: inherit;
   list-style: none;
-  color: whitesmoke;
+  color: wheat
   min-width: 200px;
   padding: 10px;
   margin: 0px;
@@ -62,26 +67,31 @@ code {
 }
 
 .list-item-part {
+  min-width: 85%;
+}
+
+.list-trashcan-part {
+  width: 15%
   z-index: 100;
   color: wheat;
-}
-.list-item-part:hover {
-  color: white;
+
+  &:hover {
+    color: white;
+  }
 }
 
 ul {
-  -webkit-padding-start: 0px;
-          padding-inline-start: 0px;
+  padding-inline-start: 0px;
 }
 
-.list-item:nth-child(2n-1) {
+.list-item:nth-child(2n - 1) {
   background-color: lightcoral;
   border-bottom: 3px solid thistle;
   border-radius: 2px 2px 10px 10px;
 }
 
-.list-item:nth-child(2n-2) {
+.list-item:nth-child(2n - 2) {
   background-color: coral;
   border-bottom: 3px solid thistle;
   border-radius: 2px 2px 10px 10px;
-}/*# sourceMappingURL=index.css.map */
+}
