--- a/my-groceries-app/src/index.css
+++ b/my-groceries-app/src/index.css
@@ -3,9 +3,12 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #313538;
 }
 
 body,
+form,
+input,
 p,
 h1,
 h2,
@@ -14,6 +17,11 @@ h4,
 h5,
 h6 {
   font-family: "Raleway";
+  font-weight: 700;
+}
+
+h2 {
+  color: wheat;
 }
 
 code {
@@ -30,10 +38,16 @@ code {
 
 .list-container {
   margin: 10px;
-  background-color: thistle;
-  padding-left: 5px;
-  padding-right: 5px;
-  border-radius: 5px;
+  background-color: #f0ffc0;
+  padding-left: 15px;
+  padding-right: 15px;
+  border-radius: 15px;
+  transition: background-color 1s ease-in-out;
+}
+
+.badinput {
+  background-color: crimson;
+  color: white;
 }
 
 .list {
@@ -50,15 +64,17 @@ code {
   justify-content: space-between;
   position: inherit;
   list-style: none;
-  color: wheat;
+  color: #313538;
   min-width: 200px;
   padding: 10px;
   margin: 0px;
   text-align: left;
+  font-weight: 700;
 }
 
 .list-item:hover {
   font-weight: bold;
+  color: darkred;
 }
 
 .list-item-part {
@@ -67,11 +83,10 @@ code {
 
 .list-trashcan-part {
   width: 10%;
-  z-index: 100;
-  color: wheat;
+  color: #313538;
 }
 .list-trashcan-part:hover {
-  color: white;
+  color: darkred;
 }
 
 ul {
@@ -84,26 +99,56 @@ ul {
   justify-content: space-between;
   position: inherit;
   list-style: none;
-  color: wheat;
+  color: #313538;
   min-width: 200px;
   min-height: 20px;
   padding: 10px;
   margin: 0px;
-  margin-bottom: -16px;
+  margin-bottom: 0px;
   text-align: left;
-  background-color: palevioletred;
-  border-bottom: 3px solid thistle;
+  background-color: #7d9bca;
+  border-bottom: 3px solid #f0ffc0;
   border-radius: 10px 10px 10px 10px;
 }
 
 .list-item:nth-child(2n-2) {
-  background-color: lightcoral;
-  border-bottom: 3px solid thistle;
+  background-color: #99bdee;
+  border-bottom: 3px solid #f0ffc0;
   border-radius: 2px 2px 10px 10px;
 }
 
 .list-item:nth-child(2n-3) {
-  background-color: coral;
-  border-bottom: 3px solid thistle;
+  background-color: #93d1f5;
+  border-bottom: 3px solid #f0ffc0;
   border-radius: 10px 10px 2px 2px;
+}
+
+.big-icon {
+  display: flex;
+  justify-content: space-between;
+  color: #313538;
+  font-size: 120px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  transform: rotate(180deg);
+  transition: rotate 0.5s ease-in-out;
+}
+.big-icon :hover {
+  rotate: 0deg;
+}
+
+.list-item-form > form > input {
+  height: 15px;
+  border-radius: 5px;
+  border: 1px solid #7d9bca;
+  padding: 2px;
+  font-weight: bold;
+  color: black;
+}
+
+.list-item-form > form > input:focus {
+  border: 2px solid #7d9bca;
 }/*# sourceMappingURL=index.css.map */
